--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 <section id="app">
   <header>
-    <h1>Weekly menu</h1>
+    <h1>Menu of the week</h1>
     <div class="header-line"></div>
   </header>
 
@@ -68,39 +68,43 @@
           <button v-show="!showForm" @click="displayForm">Add a recipe</button>
           <form v-show="showForm"
                 @submit.prevent="addRecipe">
+            <p>
             <label for="title">Enter a recipe name:</label>
-            <input id="title"
-                   name="title"
-                   required
-                   v-model="title"/>
-            <label for="ingredients">Enter an ingredient:</label>
-            <input id="ingredients"
-                   name="ingredients"
-                   v-model="ingredientName">
-            <label for="ingredient-qty">Select a quantity:</label>
-            <input type="number"
-                   id="ingredient-qty"
-                   name="ingredient-qty"
-                   min="1"
-                   max="50"
-                   v-model="ingredientQty">
-            <label for="ingredient-weight">Or, enter a weight:</label>
-            <input id="ingredient-weight"
-                   name="ingredient-weight"
-                   v-model="ingredientWeight">
+            </p>
+            <p><input id="title"
+                               name="title"
+                               required
+                               v-model="title"/></p>
+            <p><label for="ingredients">Enter an ingredient:</label></p>
+            <p><input id="ingredients"
+                               name="ingredients"
+                               v-model="ingredientName"></p>
+            <p><label for="ingredient-qty">Select a quantity:</label></p>
+            <p><input type="number"
+                               id="ingredient-qty"
+                               name="ingredient-qty"
+                               min="1"
+                               max="50"
+                               v-model="ingredientQty"></p>
+           <p> <label for="ingredient-weight">Or, enter a weight:</label></p>
+            <p><input id="ingredient-weight"
+                               name="ingredient-weight"
+                               v-model="ingredientWeight"></p>
             <p v-if="ingredientQty && ingredientWeight">Please enter either quantity or weight!</p>
-            <button @click.prevent="addIngredient">Add ingredient</button>
-            <label for="weekday">Choose a weekday, or leave blank to save the recipe for later:</label>
-            <select id="weekday"
-                    name="weekday"
-                    v-model="weekday">
+            <p><button @click.prevent="addIngredient">Add ingredient</button></p>
+            <p><label for="weekday">Choose a weekday, or leave blank to save the recipe for later:</label></p>
+            <p><select id="weekday"
+                                name="weekday"
+                                v-model="weekday">
               <option></option>
               <option v-for="weekday in weekdays">{{ weekday }}</option>
-            </select>
-            <input type="submit"
-                   id="submit"
-                   name="submit"
-                   value="Save recipe">
+            </select></p>
+            <p>
+                        <input type="submit"
+                               id="submit"
+                               name="submit"
+                               value="Save recipe"></p>
+            <p><button @click="clearForm" id="cancelForm">Cancel</button></p>
             <article>
               <h2 v-show="title.length || ingredients.length">Your recipe:</h2>
               <h3>{{ title }}</h3>
@@ -142,42 +146,41 @@
                         ingredientWeight: this.ingredientWeight
                     }
                     this.ingredients.push(ingredient)
-                    this.ingredientQty = ''
-                    this.ingredientName = ''
-                    this.ingredientWeight = ''
+                    this.clearIngredients()
                 }
             },
             //todo Gör så man kan välja vecka.
             addRecipe() {
-                    let recipe = {
-                        title: this.title,
-                        ingredients: this.ingredients.slice(),
-                        weekday: this.weekday,
-                        image: `img/${this.weekday}.jpg`,
-                        alt: this.weekday,
-                        position: function () {
-                            switch (this.weekday) {
-                                case 'monday':
-                                    return '2 / 1 / 3 / 2';
-                                case 'tuesday':
-                                    return '2 / 2 / 3 / 3';
-                                case 'wednesday':
-                                    return '2 / 3 / 3 / 4';
-                                case 'thursday':
-                                    return '2 / 4 / 3 / 5';
-                                case 'friday':
-                                    return '2 / 5 / 3 / 6';
-                                case 'saturday':
-                                    return '2 / 6 / 3 / 7';
-                                case 'sunday':
-                                    return '2 / 7 / 3 / 8';
-                            }
+                let recipe = {
+                    title: this.title,
+                    ingredients: this.ingredients.slice(),
+                    weekday: this.weekday,
+                    image: `img/${this.weekday}.jpg`,
+                    alt: this.weekday,
+                    position: function () {
+                        switch (this.weekday) {
+                            case 'monday':
+                                return '2 / 1 / 3 / 2';
+                            case 'tuesday':
+                                return '2 / 2 / 3 / 3';
+                            case 'wednesday':
+                                return '2 / 3 / 3 / 4';
+                            case 'thursday':
+                                return '2 / 4 / 3 / 5';
+                            case 'friday':
+                                return '2 / 5 / 3 / 6';
+                            case 'saturday':
+                                return '2 / 6 / 3 / 7';
+                            case 'sunday':
+                                return '2 / 7 / 3 / 8';
                         }
                     }
-                    this.removeDuplicates(recipe)
-                    this.clearForm()
+                }
+                this.removeDuplicates(recipe)
+                this.clearForm()
+                this.showRecipeSavedMsg = true
 
-                    this.$emit('save-recipe', recipe)
+                this.$emit('save-recipe', recipe)
             },
             removeDuplicates(recipe) {
                 for (let i = 0; i < this.recipes.length; i++) {
@@ -191,8 +194,12 @@
                 this.title = ''
                 this.weekday = ''
                 this.showForm = false
-                this.showRecipeSavedMsg = true
-                this.showErrorMsg = false
+                this.clearIngredients()
+            },
+            clearIngredients(){
+                this.ingredientQty = ''
+                this.ingredientName = ''
+                this.ingredientWeight = ''
             }
         }
     })
@@ -268,7 +275,8 @@
             <button @click="hideShoppingList">Hide shopping list</button>
             <h2>This week's shopping list:</h2>
             <ul v-for="recipe in recipes"
-                :key="recipe.title">
+                :key="recipe.title"
+                v-if="recipe.weekday">
               <li
                   v-for="(ingredient, index) in recipe.ingredients"
                   :key="index">
